Fri May 13 12:28:43 2005  Daniel Berger  <djberge@qwest.com>

	* array.c (rb_ary_select): can remove argc check. [ruby-core:4911]

	* test/ruby/test_array.rb: add test for find_all.

Fri May 13 11:29:00 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (unknown_node): add volatile directive to prototype.

Thu May 12 17:08:48 2005  Tanaka Akira  <akr@m17n.org>

	* io.c (rb_io_eof, remain_size, read_all, io_read, appendline)
	  (swallow, rb_io_each_byte, rb_io_getc): revert previous change.

	* io.c (rb_io_eof, io_fread, appendline, swallow, rb_io_each_byte)
	  (rb_io_getc, rb_getc): call clearerr before getc to avoid
	  stdio incompatibility.

Thu May 12 16:52:20 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/rdoc/parsers/parse_c.rb: more readability for mixing
	  progress "c..." and warning message.

Thu May 12 16:31:00 2005  NARUSE, Yui  <naruse@ruby-lang.org>

        * ext/nkf/nkf-utf8/nkf.c: follow nkf 2.0.5

Thu May 12 16:15:01 2005  Tanaka Akira  <akr@m17n.org>

	* io.c (rb_io_eof, remain_size, read_all, io_read, appendline)
	  (swallow, rb_io_each_byte, rb_io_getc): don't rely EOF flag.
	  [ruby-talk:141527]

Thu May 12 15:56:20 2005  Tilman Sauerbeck <tilman@code-monkey.de>

	* lib/rdoc/parsers/parse_c.rb: show parsing progress for C files.
	  [ruby-core:4341]

Thu May 12 13:47:56 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/drb/test_drb{ssl,unix}.rb: can test drb
	  before install. (backported from HEAD) [ruby-dev:26146]

Thu May 12 09:53:57 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_show_version): flush for non-tty stdout.

Thu May 12 09:07:07 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* test/ruby/envutil.rb, test/drb/drbtest.rb: can test drb
	  before install. (backported from HEAD) [ruby-Bugs-1672]

Thu May 12 01:23:55 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval), parse.y (arg): reduce fixnum range literal at
	  parser.  fixed: [ruby-dev:26113]
